--- a/client/index.html
+++ b/client/index.html
@@ -8,5 +8,6 @@
     <div id="app"></div>
 
     <script src="/dist/app.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
   </body>
 </html>
